fix: Blurry svg (use inline) + text size tweaks

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ main {
     flex-direction: column;
 }
 
-img {
+svg {
     width: 100%;
     height: 100%;
     animation: spin 100s linear;
@@ -44,11 +44,13 @@ span {
 }
 
 button {
+    appearance: none;
     background: white;
     padding: 0.4rem 0.8rem;
     border: none;
     border-radius: 10rem;
     transition: all 0.2s ease;
+    font-size: 0.95rem;
     cursor: crosshair;
 }
 
@@ -83,6 +85,7 @@ input {
     background-color: hsl(0deg, 0%, 97%);
     border: 1px solid hsl(0deg, 0%, 86%);
     border-radius: 10rem;
+    font-size: 0.95rem;
 }
 
 input::placeholder {
